WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287276
`FullscreenManager::exitFullscreen()` should not use `m_fullscreenElement`
https://bugs.webkit.org/show_bug.cgi?id=287276
Summary
`FullscreenManager::exitFullscreen()` should not use `m_fullscreenElement`
Tim Nguyen (:ntim)
Reported
2025-02-07 11:53:10 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-07 12:24:29 PST
<
rdar://problem/144403317
>
Tim Nguyen (:ntim)
Comment 2
2025-02-07 12:29:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40238
EWS
Comment 3
2025-02-20 10:18:10 PST
Committed
290722@main
(4624069466cf): <
https://commits.webkit.org/290722@main
> Reviewed commits have been landed. Closing PR #40238 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug