`FullscreenManager::exitFullscreen()` should not use `m_fullscreenElement` https://bugs.webkit.org/show_bug.cgi?id=287276 rdar://144403317

Reviewed by Darin Adler and Brent Fulgham.

Reduce usage of `m_fullscreenElement`, so we can remove it.

* Source/WebCore/dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::exitFullscreen):

Canonical link: https://commits.webkit.org/290722@main